--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Pok&eacute;mon REBORN Calculator</title>
+    <title>Pok&eacute;mon DESOLATION Calculator</title>
     <link type="text/css" rel="stylesheet" href="./js/vendor/select2/select2.css" />
     <link type="text/css" rel="stylesheet" href="./css/main.css?bab98f2f" />
     <link type="text/css" rel="stylesheet" href="./css/vendor/bootstrap.css" />
@@ -41,7 +41,7 @@
 <div class="wrapper">
 
     <div aria-label="Settings" role="region">
-        <span class="title-text">Pokémon REBORN Damage Calculator</span>
+        <span class="title-text">Pokémon DESOLATION Damage Calculator</span>
         <span class="genSelection" aria-labelledby="selectGenInstruction" role="radiogroup" title="Select the generation.">
             <span class="visually-hidden" id="selectGenInstruction">Select the generation.</span>
             <input class="gen visually-hidden" type="radio" name="gen" value="1" id="gen1"><label class="btn btn-small btn-left" for="gen1">RBY</label>
@@ -1967,7 +1967,7 @@
     <script type="text/javascript" src="./js/moveset_import.js?806ae144"></script>
 </div>
 
-<div class="credits">Original Created by Honko, maintained by Austin and Kris. Modified by Ander for Pokemon Reborn. Extra functions added by Nathan_Melons.
+<div class="credits">Original Created by Honko, maintained by Austin and Kris. Modified by Ander for Pokemon Reborn and by Defen for Pokemon Desolation. Additional help from Nathan Melons.
     <ul>
         <li><a href="https://github.com/ForwardFeed/runbuncalc" class="links-lighten" target="_blank">Modification Repository</a></li>
         <br>
@@ -1975,10 +1975,6 @@
     <div id="sets">
         <button type="button" id="dark-theme-toggle"></button>
         <script type="text/javascript" src="./js/dark-theme-toggle.js?be118517"></script>
-        <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
-        <button id="double-legacy-mode">Doubles Modern</button>
-        <a href="runandbun_script_imports.lua" download="lua_script_for_export">Download Lua Script</a>
-        <a href="img/AI_flowchart_R&B.png" target="_blank" rel="noopener noreferrer">Flowchart of the AI</a>
     </div>
 </div>
 
