Made the top selections easier to use.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 <div class="wrapper">
 
     <div aria-label="Settings" role="region">
-        <span class="title-text">Pokémon DESOLATION Damage Calculator</span>
+        <div>
+	<span class="title-text">Pokémon DESOLATION Damage Calculator</span>
+	</div>
+    	<div>
         <span class="genSelection" aria-labelledby="selectGenInstruction" role="radiogroup" title="Select the generation.">
             <span class="visually-hidden" id="selectGenInstruction">Select the generation.</span>
             <input class="gen visually-hidden" type="radio" name="gen" value="1" id="gen1"><label class="btn btn-small btn-left" for="gen1">RBY</label>
@@ -54,6 +57,7 @@
 			   <input class="gen visually-hidden" type="radio" name="gen" value="8" id="gen8"><label class="btn btn-wide btn-mid" for="gen8">Postgame</label>
             <input class="gen visually-hidden" type="radio" name="gen" value="9" id="gen9"><label class="btn btn-small btn-right" for="gen9">Deso</label>
         </span>
+	</div>
         <span class="notationSelection" aria-labelledby="selectNotationInstruction" role="radiogroup" title="Select the output notation.">
             <span class="visually-hidden" id="selectNotationInstruction">Select the output notation.</span>
             <input class="notation visually-hidden" type="radio" name="notation" id="pixels" value="px"><label class="btn btn-small btn-left" for="pixels">48th</label>
