--- a/index.html
+++ b/index.html
@@ -1941,9 +1941,9 @@
     <script type="text/javascript" src="./js/moveset_import.js?806ae144"></script>
 </div>
 
-<div class="credits">Original Created by Honko, maintained by Austin and Kris. Modified by Ander for Pokemon Reborn. Modified by Defen for Pokemon Desolation w/ help from Nathan Melons.
+<div class="credits">Original Created by Honko, maintained by Austin and Kris. Modified by Ander for Pokemon Reborn. Modified by Defenestratable for Pokemon Desolation w/ help from Nathan_Melons.
     <ul>
-        <li><a href="https://github.com/ForwardFeed/runbuncalc" class="links-lighten" target="_blank">Modification Repository</a></li>
+        <li><a href="https://github.com/desocalc/DesoCalc/tree/main" class="links-lighten" target="_blank">Modification Repository</a></li>
         <br>
     </ul>
     <div id="sets">
